chore: add default values to .env.example in the mongo section

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,5 @@ DISCORD_TOKEN=
 DISCORD_APPLICATION_ID=
 
 # Mongo
-MONGO_URI=
-MONGO_DATABASE=
+MONGO_URI=mongodb://localhost:27017/?replicaSet=rs0
+MONGO_DATABASE=idlebiz
